--- a/flow/writeTxt_/src/writeTxt.yml
+++ b/flow/writeTxt_/src/writeTxt.yml
@@ -1,6 +1,6 @@
 description: This folder(task) runs the cid extractor, extracts tables and paragraphs, translates them and writes as a text file.
 
-ignore_docs: [ ]
+ignore_docs: [ '202408261039192010.pdf' ]
 
 output_dir: 'output'
 config_dir: 'conf'
